--- a/src/main/webapp/css/css_pyw/subba_yw.css
+++ b/src/main/webapp/css/css_pyw/subba_yw.css
@@ -786,7 +786,7 @@
 	.tab-2 .item .in.ty-2 { font-size:18px; line-height:20px; }
 	.tab-2 .item.active::before { height:3px; }
 	.tab-2 .item a::before { min-height:48px; }
-	.tab-3 { margin:43px 0 50px; }
+	/*.tab-3 { margin:43px 0 50px; }*/
 	.tab-3 ul { display:flex; }
 	.tab-3.fixed { height:60px; }
 	.tab-3.fixed ul { top:90px; width:100%; max-width:1400px; }
