--- a/src/main/webapp/css/paging.css
+++ b/src/main/webapp/css/paging.css
@@ -26,7 +26,7 @@
     font-weight: bold;
     height: 46px;
     line-height: 46px;
-    text-shadow: 0.5px 0.8px #aaa7a5, 0.5px 1.5px #b69a75;
+    text-shadow: 0.5px 0.8px #a59b8f, 0.5px 1.5px #a59b8f;
 }
 .paging .pag-prev, .paging .pag-next, .paging .pag-first, .paging .pag-last {
     min-width: 38px;
@@ -57,22 +57,22 @@
     margin-left: -5px;
 }
 .paging .num a.active, .paging .num .active {
-    background-color: #bbb6b3;
+    background-color: #a59f99;
     color: #fff;
-    box-shadow: 1px 1px 3px #7a7165;
+    box-shadow: 1px 1px 3px #786d5d;
 }
 .paging a + a, .paging a + .active, .paging .active + a {
     margin-left: 5px;
 }
 .paging .num a {
     display: inline-block;
-    background-color: #f1ebe4;
-    box-shadow: 1px 1px 3px #9e978e;
+    background-color: #d3cdc6;
+    box-shadow: 1px 1px 3px #93897c;
 }
 .paging .num a:hover {
     color: #fffff6;
-    background-color: #bbb6b3;
-    box-shadow: inset 1px 1px 3px #8e7f6d;
+    background-color: #a59f99;
+    box-shadow: inset 1px 1px 3px #786d5d;
 }
 .pag-prev::before, .pag-first::before, .pag-first::after {
     width: 10px;
