--- a/src/main/webapp/css/css_pyw/base.css
+++ b/src/main/webapp/css/css_pyw/base.css
@@ -24,6 +24,8 @@ address,strong{font-style:normal; font-weight:normal;}
 @font-face {font-family: 'maru-buri-reg'; src: url('../../font/MaruBuri-Regular.ttf') format('truetype');}
 @font-face {font-family: 'maru-buri-semi-bold'; src: url('../../font/MaruBuri-SemiBold.ttf') format('truetype');}
 @font-face {font-family: 'maru-buri-bold'; src: url('../../font/MaruBuri-Bold.ttf') format('truetype');}
+@font-face {font-family: 'Bahagia'; src: url('../../font/Bahagia.ttf') format('truetype');}
+@font-face {font-family: 'Pacifico-Regular'; src: url('../../font/Pacifico-Regular.ttf') format('truetype');}
 
 
 
@@ -187,6 +189,7 @@ address,strong{font-style:normal; font-weight:normal;}
     vertical-align: top;
     padding-top: 20px;
     text-align: left;
+    float: left;
 }
 .donation-card-a{
     float: left;
