--- a/src/main/webapp/css/css_pyw/paging.css
+++ b/src/main/webapp/css/css_pyw/paging.css
@@ -3,6 +3,8 @@
     font-size: 0;
     text-align: center;
     margin-top: 47px;
+    position: relative;
+    right: 65px;
 }
 .paging a, .paging span.active {
     display: inline-block;
@@ -21,12 +23,12 @@
     transition: all 0.3s ease;
 }
 .paging a, .paging span.active {
-    font-size: 18px;
-    min-width: 46px;
+    font-size: 16px;
+    min-width: 40px;
     font-weight: bold;
-    height: 46px;
-    line-height: 46px;
-    text-shadow: 0.5px 0.8px #898785, 0.5px 1.5px #988888;
+    height: 40px;
+    line-height: 44px;
+    text-shadow: 0.5px 0.8px #a59b8f, 0.5px 1.5px #a59b8f;
 }
 .paging .pag-prev, .paging .pag-next, .paging .pag-first, .paging .pag-last {
     min-width: 38px;
@@ -57,22 +59,22 @@
     margin-left: -5px;
 }
 .paging .num a.active, .paging .num .active {
-    background-color: #fda1a1;
+    background-color: #a59f99;
     color: #fff;
-    box-shadow: 1px 1px 3px #cf3232d4;
+    box-shadow: 1px 1px 3px #786d5d;
 }
 .paging a + a, .paging a + .active, .paging .active + a {
     margin-left: 5px;
 }
 .paging .num a {
     display: inline-block;
-    background-color: #e3ded9;
-    box-shadow: 1px 1px 3px #d69c9c;
+    background-color: #d3cdc6;
+    box-shadow: 1px 1px 3px #93897c;
 }
 .paging .num a:hover {
     color: #fffff6;
-    background-color: #fda1a1;
-    box-shadow: inset 1px 1px 3px #d69c9c;
+    background-color: #a59f99;
+    box-shadow: inset 1px 1px 3px #786d5d;
 }
 .pag-prev::before, .pag-first::before, .pag-first::after {
     width: 10px;
@@ -85,13 +87,10 @@
     margin-bottom: 3px;
 }
 .pag-prev::before, .pag-first::before, .pag-first::after {
-    width: 12px;
-    height: 12px;
-    margin-bottom: 3px;
     margin-top: 15px;
-    border: 0 solid #ea7e7e;
+    border: 0 solid #a79784;
     border-width: 0 0 2px 2px;
-    box-shadow: -1px 2px 2px -1px #ffc0c0;
+    box-shadow: -1px 2px 2px -1px #f1ebe4;
     transform: rotate(45deg);
 }
 .pag-prev::before, .pag-next::before, .pag-first::before, .pag-last::before, .pag-first::after, .pag-last::after {
@@ -124,12 +123,9 @@
     margin-left: -5px;
 }
 .pag-next::before, .pag-last::before, .pag-last::after {
-    width: 12px;
-    height: 12px;
-    margin-bottom: 3px;
     margin-top: 15px;
-    border: 0 solid #ea7e7e;
+    border: 0 solid #a79784;
     border-width: 2px 2px 0 0;
     transform: rotate(45deg);
-    box-shadow: 2px -1px 2px -1px #ffc0c0;
+    box-shadow: 2px 0px 1px -1px #f1ebe4;
 }
